# fastapi-cookiecutter-template

./: README.md  cookiecutter.json
tools/: test_template.sh
{{cookiecutter.directory_name}}/: Dockerfile  README.md  pyproject.toml  sample.env
{{cookiecutter.directory_name}}/{{cookiecutter.project_slug}}/: settings.py
