[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = "{{cookiecutter.project_short_description}}"
authors = ["{{cookiecutter.full_name}} ({{cookiecutter.email}})"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.22.0"
{%- if cookiecutter.need_rabbitmq %}
pika = "^=1.3.2"
{%- endif %}
{%- if cookiecutter.need_kafka %}
kafka-python = "^3.0.0"
{%- endif %}
{%- if cookiecutter.need_web_service %}
fastapi = "^0.101.0"
pydantic = "^2.0.0"
uvicorn = "0.23.2"
loguru = "^0.7.0"
python-dotenv = "^1.0.0"
{%- endif %}
{% if cookiecutter.advanced_docs == "yes" -%}
aiofiles="^23.2.1"
{% endif -%}

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
black = {version = "^19.10b0", allow-prereleases = true}
autopep8 = "^2.0.0"
ipdb = "^0.13.0"
pylint = "^2.15.8"

[tool.poetry.group.aws]
optional = true

[tool.poetry.group.aws.dependencies]
mangum = "^0.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
  |Dockerfile
  |Jenkinfile
)/
'''